// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components | CONFIGURATION: default | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.all-props.1139410552",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`components | CONFIGURATION: default | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "tests.__fixtures__.components.conditional-rendering.3541072352",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`components | CONFIGURATION: default | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.default.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: default | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: default | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`components | CONFIGURATION: default | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`components | CONFIGURATION: default | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "tests.__fixtures__.components.all-supported-components.205247277",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.all-supported-components.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: default | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.613153351",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.1418522856",
    defaultMessage: "another"
});
"
`;

exports[`components | CONFIGURATION: default | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: default | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as T } from 'react-intl';
/*#__PURE__*/ _jsx(T, {
    id: "tests.__fixtures__.components.import-as.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: default | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.nested-jsx.613153351",
        defaultMessage: "hello"
    })
});
"
`;

exports[`components | CONFIGURATION: default | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`components | CONFIGURATION: default | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`components | CONFIGURATION: hash + relativeTo = "src" | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMuYWxsLXByb3BzLjExMzk0MTA1NTI=",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`components | CONFIGURATION: hash + relativeTo = "src" | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMuY29uZGl0aW9uYWwtcmVuZGVyaW5nLjM1NDEwNzIzNTI=",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`components | CONFIGURATION: hash + relativeTo = "src" | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMuZGVmYXVsdC42MTMxNTMzNTE=",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash + relativeTo = "src" | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash + relativeTo = "src" | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`components | CONFIGURATION: hash + relativeTo = "src" | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`components | CONFIGURATION: hash + relativeTo = "src" | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMuYWxsLXN1cHBvcnRlZC1jb21wb25lbnRzLjIwNTI0NzI3Nw==",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMuYWxsLXN1cHBvcnRlZC1jb21wb25lbnRzLjYxMzE1MzM1MQ==",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash + relativeTo = "src" | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMubXVsdGlwbGUtdXNlcy42MTMxNTMzNTE=",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMubXVsdGlwbGUtdXNlcy4xNDE4NTIyODU2",
    defaultMessage: "another"
});
"
`;

exports[`components | CONFIGURATION: hash + relativeTo = "src" | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash + relativeTo = "src" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as T } from 'react-intl';
/*#__PURE__*/ _jsx(T, {
    id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMuaW1wb3J0LWFzLjYxMzE1MzM1MQ==",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash + relativeTo = "src" | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMubmVzdGVkLWpzeC42MTMxNTMzNTE=",
        defaultMessage: "hello"
    })
});
"
`;

exports[`components | CONFIGURATION: hash + relativeTo = "src" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`components | CONFIGURATION: hash + relativeTo = "src" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`components | CONFIGURATION: hash + removePrefix = "src/" | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMuYWxsLXByb3BzLjExMzk0MTA1NTI=",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`components | CONFIGURATION: hash + removePrefix = "src/" | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMuY29uZGl0aW9uYWwtcmVuZGVyaW5nLjM1NDEwNzIzNTI=",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`components | CONFIGURATION: hash + removePrefix = "src/" | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMuZGVmYXVsdC42MTMxNTMzNTE=",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash + removePrefix = "src/" | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash + removePrefix = "src/" | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`components | CONFIGURATION: hash + removePrefix = "src/" | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`components | CONFIGURATION: hash + removePrefix = "src/" | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMuYWxsLXN1cHBvcnRlZC1jb21wb25lbnRzLjIwNTI0NzI3Nw==",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMuYWxsLXN1cHBvcnRlZC1jb21wb25lbnRzLjYxMzE1MzM1MQ==",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash + removePrefix = "src/" | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMubXVsdGlwbGUtdXNlcy42MTMxNTMzNTE=",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMubXVsdGlwbGUtdXNlcy4xNDE4NTIyODU2",
    defaultMessage: "another"
});
"
`;

exports[`components | CONFIGURATION: hash + removePrefix = "src/" | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash + removePrefix = "src/" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as T } from 'react-intl';
/*#__PURE__*/ _jsx(T, {
    id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMuaW1wb3J0LWFzLjYxMzE1MzM1MQ==",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash + removePrefix = "src/" | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMubmVzdGVkLWpzeC42MTMxNTMzNTE=",
        defaultMessage: "hello"
    })
});
"
`;

exports[`components | CONFIGURATION: hash + removePrefix = "src/" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`components | CONFIGURATION: hash + removePrefix = "src/" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`components | CONFIGURATION: hash base64 | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMuYWxsLXByb3BzLjExMzk0MTA1NTI=",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`components | CONFIGURATION: hash base64 | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMuY29uZGl0aW9uYWwtcmVuZGVyaW5nLjM1NDEwNzIzNTI=",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`components | CONFIGURATION: hash base64 | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMuZGVmYXVsdC42MTMxNTMzNTE=",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash base64 | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash base64 | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`components | CONFIGURATION: hash base64 | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`components | CONFIGURATION: hash base64 | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMuYWxsLXN1cHBvcnRlZC1jb21wb25lbnRzLjIwNTI0NzI3Nw==",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMuYWxsLXN1cHBvcnRlZC1jb21wb25lbnRzLjYxMzE1MzM1MQ==",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash base64 | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMubXVsdGlwbGUtdXNlcy42MTMxNTMzNTE=",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMubXVsdGlwbGUtdXNlcy4xNDE4NTIyODU2",
    defaultMessage: "another"
});
"
`;

exports[`components | CONFIGURATION: hash base64 | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash base64 | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as T } from 'react-intl';
/*#__PURE__*/ _jsx(T, {
    id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMuaW1wb3J0LWFzLjYxMzE1MzM1MQ==",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash base64 | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "dGVzdHMuX19maXh0dXJlc19fLmNvbXBvbmVudHMubmVzdGVkLWpzeC42MTMxNTMzNTE=",
        defaultMessage: "hello"
    })
});
"
`;

exports[`components | CONFIGURATION: hash base64 | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`components | CONFIGURATION: hash base64 | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`components | CONFIGURATION: hash murmur3 | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "4119831092",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`components | CONFIGURATION: hash murmur3 | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "532008876",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`components | CONFIGURATION: hash murmur3 | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "2177338247",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash murmur3 | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash murmur3 | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`components | CONFIGURATION: hash murmur3 | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`components | CONFIGURATION: hash murmur3 | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "2726788119",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "867830427",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash murmur3 | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "1593070696",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "1581423416",
    defaultMessage: "another"
});
"
`;

exports[`components | CONFIGURATION: hash murmur3 | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash murmur3 | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as T } from 'react-intl';
/*#__PURE__*/ _jsx(T, {
    id: "504187125",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash murmur3 | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "4229331028",
        defaultMessage: "hello"
    })
});
"
`;

exports[`components | CONFIGURATION: hash murmur3 | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`components | CONFIGURATION: hash murmur3 | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`components | CONFIGURATION: hash unknown fallback to murmur3 | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "4119831092",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`components | CONFIGURATION: hash unknown fallback to murmur3 | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "532008876",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`components | CONFIGURATION: hash unknown fallback to murmur3 | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "2177338247",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash unknown fallback to murmur3 | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash unknown fallback to murmur3 | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`components | CONFIGURATION: hash unknown fallback to murmur3 | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`components | CONFIGURATION: hash unknown fallback to murmur3 | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "2726788119",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "867830427",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash unknown fallback to murmur3 | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "1593070696",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "1581423416",
    defaultMessage: "another"
});
"
`;

exports[`components | CONFIGURATION: hash unknown fallback to murmur3 | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash unknown fallback to murmur3 | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as T } from 'react-intl';
/*#__PURE__*/ _jsx(T, {
    id: "504187125",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: hash unknown fallback to murmur3 | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "4229331028",
        defaultMessage: "hello"
    })
});
"
`;

exports[`components | CONFIGURATION: hash unknown fallback to murmur3 | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`components | CONFIGURATION: hash unknown fallback to murmur3 | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.different-module-source.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "another"
});
"
`;

exports[`components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as T } from 'react-intl';
/*#__PURE__*/ _jsx(T, {
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        defaultMessage: "hello"
    })
});
"
`;

exports[`components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`components | CONFIGURATION: relativeTo = "" | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.all-props.1139410552",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`components | CONFIGURATION: relativeTo = "" | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "tests.__fixtures__.components.conditional-rendering.3541072352",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`components | CONFIGURATION: relativeTo = "" | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.default.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: relativeTo = "" | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: relativeTo = "" | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`components | CONFIGURATION: relativeTo = "" | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`components | CONFIGURATION: relativeTo = "" | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "tests.__fixtures__.components.all-supported-components.205247277",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.all-supported-components.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: relativeTo = "" | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.613153351",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.1418522856",
    defaultMessage: "another"
});
"
`;

exports[`components | CONFIGURATION: relativeTo = "" | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: relativeTo = "" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as T } from 'react-intl';
/*#__PURE__*/ _jsx(T, {
    id: "tests.__fixtures__.components.import-as.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: relativeTo = "" | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.nested-jsx.613153351",
        defaultMessage: "hello"
    })
});
"
`;

exports[`components | CONFIGURATION: relativeTo = "" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`components | CONFIGURATION: relativeTo = "" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`components | CONFIGURATION: relativeTo = "../" | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.all-props.1139410552",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`components | CONFIGURATION: relativeTo = "../" | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "tests.__fixtures__.components.conditional-rendering.3541072352",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`components | CONFIGURATION: relativeTo = "../" | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.default.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: relativeTo = "../" | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: relativeTo = "../" | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`components | CONFIGURATION: relativeTo = "../" | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`components | CONFIGURATION: relativeTo = "../" | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "tests.__fixtures__.components.all-supported-components.205247277",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.all-supported-components.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: relativeTo = "../" | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.613153351",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.1418522856",
    defaultMessage: "another"
});
"
`;

exports[`components | CONFIGURATION: relativeTo = "../" | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: relativeTo = "../" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as T } from 'react-intl';
/*#__PURE__*/ _jsx(T, {
    id: "tests.__fixtures__.components.import-as.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: relativeTo = "../" | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.nested-jsx.613153351",
        defaultMessage: "hello"
    })
});
"
`;

exports[`components | CONFIGURATION: relativeTo = "../" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`components | CONFIGURATION: relativeTo = "../" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src" | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.all-props.1139410552",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`components | CONFIGURATION: removePrefix = "src" | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "tests.__fixtures__.components.conditional-rendering.3541072352",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`components | CONFIGURATION: removePrefix = "src" | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.default.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src" | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src" | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`components | CONFIGURATION: removePrefix = "src" | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`components | CONFIGURATION: removePrefix = "src" | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "tests.__fixtures__.components.all-supported-components.205247277",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.all-supported-components.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src" | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.613153351",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.1418522856",
    defaultMessage: "another"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src" | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as T } from 'react-intl';
/*#__PURE__*/ _jsx(T, {
    id: "tests.__fixtures__.components.import-as.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src" | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.nested-jsx.613153351",
        defaultMessage: "hello"
    })
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.all-props.1139410552",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | all props 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.all-props.1139410552",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "tests.__fixtures__.components.conditional-rendering.3541072352",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | conditional rendering 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "tests.__fixtures__.components.conditional-rendering.3541072352",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.default.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | default 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.default.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | different module source 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | does nothing if component props are spread 2`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | does nothing if components not imported from react-intl 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "tests.__fixtures__.components.all-supported-components.205247277",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.all-supported-components.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | import all supported components 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "tests.__fixtures__.components.all-supported-components.205247277",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.all-supported-components.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.613153351",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.1418522856",
    defaultMessage: "another"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | multiple uses 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.613153351",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.1418522856",
    defaultMessage: "another"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | user id 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as T } from 'react-intl';
/*#__PURE__*/ _jsx(T, {
    id: "tests.__fixtures__.components.import-as.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | with FormattedMessage imported as something else 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as T } from 'react-intl';
/*#__PURE__*/ _jsx(T, {
    id: "tests.__fixtures__.components.import-as.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.nested-jsx.613153351",
        defaultMessage: "hello"
    })
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | with FormattedMessage nested in other JSX 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.nested-jsx.613153351",
        defaultMessage: "hello"
    })
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | with a value interpolated in the message 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src.__fixtures__" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src/" -- with slash | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.all-props.1139410552",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`components | CONFIGURATION: removePrefix = "src/" -- with slash | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "tests.__fixtures__.components.conditional-rendering.3541072352",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`components | CONFIGURATION: removePrefix = "src/" -- with slash | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.default.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src/" -- with slash | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src/" -- with slash | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`components | CONFIGURATION: removePrefix = "src/" -- with slash | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`components | CONFIGURATION: removePrefix = "src/" -- with slash | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "tests.__fixtures__.components.all-supported-components.205247277",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.all-supported-components.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src/" -- with slash | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.613153351",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.1418522856",
    defaultMessage: "another"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src/" -- with slash | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src/" -- with slash | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as T } from 'react-intl';
/*#__PURE__*/ _jsx(T, {
    id: "tests.__fixtures__.components.import-as.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src/" -- with slash | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.nested-jsx.613153351",
        defaultMessage: "hello"
    })
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src/" -- with slash | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`components | CONFIGURATION: removePrefix = "src/" -- with slash | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`components | CONFIGURATION: removePrefix = /__fixtures__/ | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.all-props.1139410552",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`components | CONFIGURATION: removePrefix = /__fixtures__/ | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "tests.__fixtures__.components.conditional-rendering.3541072352",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`components | CONFIGURATION: removePrefix = /__fixtures__/ | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.default.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = /__fixtures__/ | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = /__fixtures__/ | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`components | CONFIGURATION: removePrefix = /__fixtures__/ | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`components | CONFIGURATION: removePrefix = /__fixtures__/ | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "tests.__fixtures__.components.all-supported-components.205247277",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.all-supported-components.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = /__fixtures__/ | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.613153351",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.1418522856",
    defaultMessage: "another"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = /__fixtures__/ | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = /__fixtures__/ | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as T } from 'react-intl';
/*#__PURE__*/ _jsx(T, {
    id: "tests.__fixtures__.components.import-as.613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = /__fixtures__/ | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.nested-jsx.613153351",
        defaultMessage: "hello"
    })
});
"
`;

exports[`components | CONFIGURATION: removePrefix = /__fixtures__/ | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`components | CONFIGURATION: removePrefix = /__fixtures__/ | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`components | CONFIGURATION: removePrefix = true | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "1139410552",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`components | CONFIGURATION: removePrefix = true | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "3541072352",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`components | CONFIGURATION: removePrefix = true | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = true | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = true | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`components | CONFIGURATION: removePrefix = true | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`components | CONFIGURATION: removePrefix = true | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "205247277",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = true | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "613153351",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "1418522856",
    defaultMessage: "another"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = true | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = true | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as T } from 'react-intl';
/*#__PURE__*/ _jsx(T, {
    id: "613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: removePrefix = true | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "613153351",
        defaultMessage: "hello"
    })
});
"
`;

exports[`components | CONFIGURATION: removePrefix = true | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`components | CONFIGURATION: removePrefix = true | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`components | CONFIGURATION: separator = "_" | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests___fixtures___components_all-props_2080361687",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`components | CONFIGURATION: separator = "_" | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "tests___fixtures___components_conditional-rendering_3541072352",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`components | CONFIGURATION: separator = "_" | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests___fixtures___components_default_613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: separator = "_" | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: separator = "_" | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`components | CONFIGURATION: separator = "_" | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`components | CONFIGURATION: separator = "_" | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "tests___fixtures___components_all-supported-components_205247277",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests___fixtures___components_all-supported-components_613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: separator = "_" | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests___fixtures___components_multiple-uses_613153351",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests___fixtures___components_multiple-uses_1418522856",
    defaultMessage: "another"
});
"
`;

exports[`components | CONFIGURATION: separator = "_" | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: separator = "_" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as T } from 'react-intl';
/*#__PURE__*/ _jsx(T, {
    id: "tests___fixtures___components_import-as_613153351",
    defaultMessage: "hello"
});
"
`;

exports[`components | CONFIGURATION: separator = "_" | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests___fixtures___components_nested-jsx_613153351",
        defaultMessage: "hello"
    })
});
"
`;

exports[`components | CONFIGURATION: separator = "_" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`components | CONFIGURATION: separator = "_" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;
